End of section 11 -- Photo upload functionality

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dlbjb52yb",
+    "ApiKey": "313837799731617",
+    "ApiSecret": "EQOc8t9Y8B3I9MErVoEsGaqohxA"
+  }
 }
